# Rainsonet

./: .gitignore  Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: commands.rs  lib.rs  main.rs  wallet.rs
consensus/: Cargo.toml
consensus/src/: engine.rs  lib.rs  proposal.rs  validator.rs  vote.rs
core/: Cargo.toml
core/src/: config.rs  error.rs  lib.rs  traits.rs  types.rs
crypto/: Cargo.toml
crypto/src/: derivation.rs  hashing.rs  keys.rs  lib.rs  signing.rs
docs/: ARCHITECTURE.md  SDK.md
modules/relyo/: Cargo.toml
modules/relyo/src/: genesis.rs  ledger.rs  lib.rs  mempool.rs  transaction.rs  validator.rs
node/: Cargo.toml
node/src/: api.rs  lib.rs  main.rs  node.rs  runtime.rs
p2p/: Cargo.toml
p2p/src/: behaviour.rs  lib.rs  message.rs  network.rs  peer.rs
sdk/: package.json  tsconfig.json
sdk/src/: client.ts  crypto.ts  index.ts  transaction.ts  types.ts  utils.ts  wallet.ts
state/: Cargo.toml
state/src/: lib.rs  memory.rs  persistent.rs  snapshot.rs  store.rs
