[workspace]
resolver = "2"
members = [
    "core",
    "crypto",
    "state",
    "p2p",
    "consensus",
    "modules/relyo",
    "node",
    "cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RAINSONET Contributors"]
license = "Apache-2.0"
repository = "https://github.com/rainsonet/rainsonet"
description = "A Decentralized, Fast, Secure Payment Rail"

[workspace.dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
blake3 = "1.5"
rand = "0.8"
hkdf = "0.12"
sha2 = "0.10"

# Networking
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "mdns", "tokio"] }

# Storage
rocksdb = "0.22"
sled = "0.34"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# HTTP API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Utils
hex = "0.4"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
parking_lot = "0.12"
dashmap = "5.5"
