[package]
name = "rainsonet-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI tools for RAINSONET"

[[bin]]
name = "rainsonet"
path = "src/main.rs"

[dependencies]
rainsonet-core = { path = "../core" }
rainsonet-crypto = { path = "../crypto" }
rainsonet-relyo = { path = "../modules/relyo" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
dialoguer = "0.11"
indicatif = "0.17"
colored = "2.1"
dirs = "5.0"
