[package]
name = "rainsonet-consensus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Consensus engine for RAINSONET"

[dependencies]
rainsonet-core = { path = "../core" }
rainsonet-crypto = { path = "../crypto" }
rainsonet-state = { path = "../state" }
rainsonet-p2p = { path = "../p2p" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
