[package]
name = "rainsonet-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "RAINSONET node implementation"

[[bin]]
name = "rainsonet-node"
path = "src/main.rs"

[dependencies]
rainsonet-core = { path = "../core" }
rainsonet-crypto = { path = "../crypto" }
rainsonet-state = { path = "../state" }
rainsonet-p2p = { path = "../p2p" }
rainsonet-consensus = { path = "../consensus" }
rainsonet-relyo = { path = "../modules/relyo" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
