[package]
name = "rainsonet-p2p"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "P2P networking layer for RAINSONET"

[dependencies]
rainsonet-core = { path = "../core" }
rainsonet-crypto = { path = "../crypto" }
libp2p = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
