[package]
name = "rainsonet-relyo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "RELYO payment module for RAINSONET"

[dependencies]
rainsonet-core = { path = "../../core" }
rainsonet-crypto = { path = "../../crypto" }
rainsonet-state = { path = "../../state" }
rainsonet-consensus = { path = "../../consensus" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
